--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,40 @@
-<ul class="nav">
+<ul class='nav'>
   <li>
-    <%= link_to "Postit!", root_path, :class => 'brand' %>
+    <%= link_to 'Postit!', root_path, :class => 'brand' %>
   </li>
-  <li>
-    <%= link_to 'link', '' %>
-  </li>
-</ul>
+  </ul>
+
+<div class='btn-group nav_item'>
+  <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' =>'dropdown' do  %>
+  Categories <span class='caret'></span>
+  <% end %>
+ <ul class = 'dropdown-menu'>
+ <% Category.all.each do |category|%>
+   <li> <%= link_to category.name,category_path(category) %></li>
+       <%end%>
+   <li class='divider'></li>
+   <li><%=link_to(new_category_path) do %>
+         <i class="icon-plus-sign"> </i>
+         New category
+         <% end%>
+
+
+
+         </li>
+ </ul>
+</div>
+
+
+
+
+
+
+
+
+<div class ='nav_item'>
+  <%= link_to 'New Category', new_category_path, class: 'btn btn  btn-small' %>
+</div>
+
+ <div class ='nav_item'>
+    <%= link_to 'New Post', new_post_path, class: 'btn btn-success btn-small' %>
+</div>
