--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,39 +2,61 @@
   <li>
     <%= link_to 'Postit!', root_path, :class => 'brand' %>
   </li>
-  </ul>
-
+</ul>
 <div class='btn-group nav_item'>
   <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' =>'dropdown' do  %>
-  Categories <span class='caret'></span>
+      Categories <span class='caret'></span>
   <% end %>
- <ul class = 'dropdown-menu'>
- <% Category.all.each do |category|%>
-   <li> <%= link_to category.name,category_path(category) %></li>
-       <%end%>
-   <li class='divider'></li>
-   <li><%=link_to(new_category_path) do %>
-         <i class="icon-plus-sign"> </i>
-         New category
-         <% end%>
-
-
-
-         </li>
- </ul>
+  <ul class = 'dropdown-menu'>
+    <% Category.all.each do |category|%>
+        <li> <%= link_to category.name,category_path(category) %></li>
+    <%end%>
+    <%if logged_in? %>
+        <li class='divider'></li>
+        <li><%=link_to(new_category_path) do %>
+              <i class="icon-plus-sign"> </i>
+              New category
+          <% end %>
+        </li>
+    <% end %>
+  </ul>
 </div>
+<% if logged_in?  %>
 
+    <div class ='nav_item'>
+      <%= link_to 'New Post', new_post_path, class: 'btn btn-success btn-small' %>
+    </div>
+    <div class ='btn-group nav_item'>
+      <%= link_to('', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown') do %>
+          <%= current_user.username %>
+          <span class='caret'></span>
+      <% end %>
+      <ul class='dropdown-menu'>
+        <li>
+          <%= link_to edit_user_path(current_user) do %>
+              <i class="icon-pencil"></i>
+              edit profile
+          <% end %>
+        </li>
+        <li>
+          <%= link_to user_path (current_user) do %>
+              <i class='icon-user'></i>
+              view profile
+          <% end %>
+        </li>
 
-
-
-
-
-
-
-<div class ='nav_item'>
-  <%= link_to 'New Category', new_category_path, class: 'btn btn  btn-small' %>
-</div>
-
- <div class ='nav_item'>
-    <%= link_to 'New Post', new_post_path, class: 'btn btn-success btn-small' %>
-</div>
+        <li> <%= link_to  logout_path do%>
+              <i class="icon-circle-arrow-left"></i>
+              logout
+          <% end %>
+        </li>
+      </ul>
+    </div>
+<% else #logged out%>
+    <div class ='nav_item'>
+      <%= link_to 'Register', register_path, class: 'btn btn-success btn-small' %>
+    </div>
+    <div class ='nav_item'>
+      <%= link_to 'Log in', login_path, class: 'btn btn-small' %>
+    </div>
+<% end %>
