--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,8 @@
-<p class ="pull-right">
-  [<%= link_to "edit this post", edit_post_path(@post) %>]
-</p>
+<% if logged_in? %>
+    <p class ="pull-right">
+      [<%= link_to "edit this post", edit_post_path(@post) %>]
+    </p>
+<% end %>
 <p>
   <%= render @post.categories %>
 </p>
@@ -9,27 +11,26 @@
   <%=@post.description %>
 </p>
 <hr/>
-<div class ='well'>
-  <%= form_for [@post, @comment] do|f| %> <!-- /post/id/comments -->
-      <%= render 'shared/errors',obj: @comment %>
-      <div class='control-group'>
-        <%= f.label :body,'Leave a comment:' %>
-        <%= f.text_area :body, rows: 3, class: 'span4' %>
+<% if logged_in? %>
+    <div class ='well'>
+      <%= form_for [@post, @comment] do|f| %> <!-- /post/id/comments -->
+          <%= render 'shared/errors',obj: @comment %>
+          <div class='control-group'>
+            <%= f.label :body,'Leave a comment:' %>
+            <%= f.text_area :body, rows: 3, class: 'span4' %>
+          </div>
+          <div class='control-group'>
+            <%= f.submit 'Add Comment',class: 'btn btn-primary' %>
+      <%end%>
       </div>
-      <div class='control-group'>
-        <%= f.submit 'Add Comment',class: 'btn btn-primary' %>
-  <%end%>
-  </div>
-</div>
-<h5>Comments:</h5>
-<% @post.comments.each do |comment|%>
-    <div class='well span8'>
-      <em><%= comment.body %></em>
-      <p>
-        <span class='quiet'> by </span><%= comment.creator.username%>
-        <small>at <%= display_datetime(comment.created_at) %></small>
-      </p>
-
     </div>
+<%end%>
+<% if @post.comments.size >= 1 %>
+    <h5>Comments:</h5>
+    <% @post.comments.each do |comment|%>
+        <%= render 'comments/comment', comment:comment%>
+    <%end%>
+<%else%>
+    NO COMMENTS YET
 <%end%>
 
