--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,7 +10,7 @@
         <%= f.text_field :url %>
       </div>
       <div class='control-group'>
-        <%= f.label :description,"textarea" %>
+        <%= f.label :description,"Description" %>
         <%= f.text_area :description%>
       </div>
       <div class = 'control-group'>
