--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,7 +30,7 @@
 
 <%else%>
     <h5>Comments:</h5>
-    <% @post.comments.each do |comment|%>
+    <% @post.reload.comments.each do |comment|%>
         <%= render 'comments/comment', comment:comment%>
     <%end%>
 <%end%>
